--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
   "homepage": "https://github.com/ArticoDigital/inuit-css#readme",
   "devDependencies": {
     "autoprefixer": "^7.1.6",
+    "compression-webpack-plugin": "^1.0.1",
     "cross-env": "^5.1.1",
     "css-loader": "^0.28.7",
     "cssnano": "^3.10.0",
     "extract-text-webpack-plugin": "^3.0.2",
+    "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.7.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "postcss-loader": "^2.0.8",
@@ -35,7 +37,5 @@
     "style-loader": "^0.19.0",
     "webpack": "^3.8.1"
   },
-  "dependencies": {
-
-  }
+  "dependencies": {}
 }
